added moderator flag for meeting member, already i mplemented for saveAppointment and updateAppointment (Issue 626)